# YarnSpinner-Rust

./: readme.md
.github/workflows/: ci.yml
crates/bevy_plugin/: Cargo.toml
crates/bevy_plugin/src/: plugin.rs
crates/bevy_plugin/src/dialogue_runner/: builder.rs
crates/bevy_plugin/src/localization/: line_id_generation.rs
crates/codegen/: Cargo.toml
crates/compiler/: Cargo.toml
crates/compiler/src/: compilation_steps.rs  lib.rs  project.rs  string_table_manager.rs
crates/compiler/src/compilation_steps/: add_error_for_empty_nodes.rs  generate_code.rs  validate_unique_inferred_variable.rs
crates/compiler/src/compiler/: add_tags_to_lines.rs  run_compilation.rs
crates/compiler/src/listeners/: compiler_listener.rs  untagged_line_listener.rs
crates/compiler/src/listeners/error_listener/: diagnostic.rs
crates/compiler/src/output/: declaration.rs
crates/compiler/src/visitors/: code_generation_visitor.rs  declaration_visitor.rs  string_table_generator_visitor.rs
crates/core/: Cargo.toml
crates/core/src/: library.rs
crates/example_dialogue_view/: Cargo.toml
crates/runtime/: Cargo.toml
crates/runtime/src/: language.rs  pluralization.rs  virtual_machine.rs
crates/yarnspinner/: Cargo.toml
crates/yarnspinner/tests/: dialogue_tests.rs  error_handling_tests.rs  language_tests.rs  project_file_tests.rs  project_tests.rs  tag_tests.rs
demo/: Cargo.toml
demo/src/: setup.rs
examples/bevy_yarnspinner/: Cargo.toml
examples/yarnspinner_without_bevy/: Cargo.toml
examples/yarnspinner_without_bevy/src/: lib.rs
(+5 files in other folders)
