[package]
name = "yarnspinner_compiler"
version = "0.7.0"
edition = "2024"
repository = "https://github.com/YarnSpinnerTool/YarnSpinner-Rust"
homepage = "https://docs.yarnspinner.dev/"
categories = [ "game-development", "compilers" ]
authors = [ "Jan Hohenheim <jan@hohenheim.ch>" ]
license = "MIT OR Apache-2.0"
description = "Compiler for Yarn Spinner for Rust, the friendly tool for writing game dialogue"

[features]
default = [  ]
serde = [ "dep:serde", "dep:serde_json", "bevy?/serialize", "yarnspinner_core/serde" ]
bevy = [ "dep:bevy", "yarnspinner_core/bevy" ]

[dependencies]
antlr-rust = "=0.3.0-beta"
better_any = "=0.2.0"
regex = "1"
yarnspinner_internal_shared = { path = "../internal_shared", version = "0.1.0" }
yarnspinner_core = { path = "../core", version = "0.7.0" }
annotate-snippets = "0.10"
serde = { version = "1", features = [ "derive" ], optional = true }
serde_json = { version = "1", optional = true }
bevy = { version = "0.18", default-features = false, optional = true }
rand = { version = "0.9", features = [ "small_rng" ] }
crc32fast = "1.5"
globset = "0.4"
walkdir = "2.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1.12", features = [
    "wasm-bindgen",
] } # see https://github.com/Amanieu/parking_lot/issues/269, pulled in by (unmaintained) anltr-rust
